dados nao sincronizados e eventos offline e online

--- a/www/index.html
+++ b/www/index.html
@@ -45,6 +45,7 @@
     <script src="js/definicoesCtrl.js"></script>
     <script src="js/mudarPasswordCtrl.js"></script>
     <script src="js/ZoomService.js"></script>
+    <script src="js/dadosNaoSincCtrl.js"></script>
 
 </head>
 <body ng-app="easyNutri" ng-controller="MainCtrl">
