--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,7 @@
     <script src="js/mudarPasswordCtrl.js"></script>
     <script src="js/ZoomService.js"></script>
     <script src="js/dadosNaoSincCtrl.js"></script>
+    <script src="js/tabEquiCtrl.js"></script>
 
 </head>
 <body ng-app="easyNutri" ng-controller="MainCtrl">
