offline mode for testing

--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
     <!-- angular date picker css-->
     <link href="lib/datePicker/css/angular-pickadate.css" rel="stylesheet">
 
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="js/jQuery.js"></script>
     <link href="lib/toastr/toastr.css" rel="stylesheet"/>
     <script src="lib/toastr/toastr.js"></script>
 
